--- a/src/App.css
+++ b/src/App.css
@@ -7,19 +7,20 @@
 .App > div {
   margin-right: 50px;
 }
-*/
 
-.is-done {
-
-  opacity: 0.5;
-}
-.active-filter {
-  background-color: blueviolet;
+.error {
+  border: red 1px solid;
 }
 
-.error{
-  border: 2px solid red;
-}
-.error-message{
+.error-message {
   color: red;
 }
+
+.active-filter {
+  background-color: aquamarine;
+}
+
+.is-done {
+  opacity: 0.5;
+}
+*/
